src_old_backup/driver/ajinextek/AXL(Library)/C, C++/AXC.h



    // 카운터 모듈의 위치 주기 모드 트리거에 사용되는 위치 주기를 확인한다.
    DWORD  __stdcall AxcTriggerGetPosPeriod(long lChannelNo, double* dpPeriod);


    // 카운터 모듈의 위치 주기 모드 트리거 사용시 위치 증감에 대한 유효기능을 설정한다.
    // dwDirection -->  0x00 : 카운터의 증/감에 대하여 트리거 주기 마다 출력.
    // dwDirection -->  0x01 : 카운터가 증가 할때만 트리거 주기 마다 출력.
    // dwDirection -->  0x01 : 카운터가 감소 할때만 트리거 주기 마다 출력.
    DWORD  __stdcall AxcTriggerSetDirectionCheck(long lChannelNo, DWORD dwDirection);

    // 카운터 모듈의 위치 주기 모드 트리거 사용시 위치 증감에 대한 유효기능 설정을 확인한다.
    DWORD  __stdcall AxcTriggerGetDirectionCheck(long lChannelNo, DWORD* dwpDirection);


    // 카운터 모듈의 위치 주기 모드 트리거 기능의 범위, 위치 주기를 한번에 설정한다.
    // 위치 설정 단위 :  AxcMotSetMoveUnitPerPulse로 설정한 단위.
    DWORD  __stdcall AxcTriggerSetBlock(long lChannelNo, double dLower, double dUpper, double dABSod);


    // 카운터 모듈의 위치 주기 모드 트리거 기능의 범위, 위치 주기를 설정을 한번에 확인한다.
    DWORD  __stdcall AxcTriggerGetBlock(long lChannelNo, double *dpLower, double *dpUpper, double *dpABSod);


    // 카운터 모듈의 트리거 출력 펄스 폭을 설정한다.
    // 단위 : uSec
    DWORD  __stdcall AxcTriggerSetTime(long lChannelNo, double dTrigTime);


    // 카운터 모듈의 트리거 출력 펄스 폭 설정을 확인한다.
    DWORD  __stdcall AxcTriggerGetTime(long lChannelNo, double* dpTrigTime);


    // 카운터 모듈의 트리거 출력 펄스의 출력 레벨을 설정한다.
    // dwLevel -->  0x00 : 트리거 출력시 'Low' 레벨 출력.
    // dwLevel -->  0x01 : 트리거 출력시 'High' 레벨 출력.
    DWORD  __stdcall AxcTriggerSetLevel(long lChannelNo, DWORD dwLevel);

    // 카운터 모듈의 트리거 출력 펄스의 출력 레벨 설정을 확인한다.
    DWORD  __stdcall AxcTriggerGetLevel(long lChannelNo, DWORD* dwpLevel);


    // 카운터 모듈의 주파수 트리거 출력 기능에 필요한 주파수를 설정한다.
    // 단위 : Hz, 범위 : 1Hz ~ 500 kHz
    DWORD  __stdcall AxcTriggerSetFreq(long lChannelNo, DWORD dwFreqency);

    // 카운터 모듈의 주파수 트리거 출력 기능에 필요한 주파수를 설정을 확인한다.
    DWORD  __stdcall AxcTriggerGetFreq(long lChannelNo, DWORD* dwpFreqency);


    // 카운터 모듈의 지정 채널에 대한 범용 출력 값을 설정한다.
    // dwOutput 범위 : 0x00 ~ 0x0F, 각 채널당 4개의 범용 출력
    DWORD  __stdcall AxcSignalWriteOutput(long lChannelNo, DWORD dwOutput);


    // 카운터 모듈의 지정 채널에 대한 범용 출력 값을 확인한다.
    DWORD  __stdcall AxcSignalReadOutput(long lChannelNo, DWORD* dwpOutput);


    // 카운터 모듈의 지정 채널에 대한 범용 출력 값을 비트 별로 설정한다.
    // lBitNo 범위 : 0 ~ 3, 각 채널당 4개의 범용 출력
    DWORD  __stdcall AxcSignalWriteOutputBit(long lChannelNo, long lBitNo, DWORD uOnOff);

    // 카운터 모듈의 지정 채널에 대한 범용 출력 값을 비트 별로 확인 한다.
    // lBitNo 범위 : 0 ~ 3
    DWORD  __stdcall AxcSignalReadOutputBit(long lChannelNo,long lBitNo, DWORD *upOnOff);


    // 카운터 모듈의 지정 채널에 대한 범용 입력 값을 확인한다.
    DWORD  __stdcall AxcSignalReadInput(long lChannelNo, DWORD* dwpInput);


    // 카운터 모듈의 지정 채널에 대한 범용 입력 값을 비트 별로 확인 한다.
    // lBitNo 범위 : 0 ~ 3
    DWORD  __stdcall AxcSignalReadInputBit(long lChannelNo, long lBitNo, DWORD *upOnOff);


    // 카운터 모듈의 트리거 출력을 활성화 한다.
    // 현재 설정된 기능에 따라 트리거 출력이 최종적으로 출력할 것인지 설정한다.
    DWORD  __stdcall AxcTriggerSetEnable(long lChannelNo, DWORD dwUsage);


    // 카운터 모듈의 트리거 출력 활설화 설정 내용을 확인하다.
    DWORD  __stdcall AxcTriggerGetEnable(long lChannelNo, DWORD* dwpUsage);


    // 카운터 모듈의 절대위치 트리거 기능을 위해 설정된 RAM 내용을 확인한다.
    // dwAddr 범위 : 0x0000 ~ 0x1FFFF;
    DWORD  __stdcall AxcTriggerReadAbsRamData(long lChannelNo, DWORD dwAddr, DWORD* dwpData);


    // 카운터 모듈의 절대위치 트리거 기능을 위해 필요한 RAM 내용을 설정한다.
    // dwAddr 범위 : 0x0000 ~ 0x1FFFF;
    DWORD  __stdcall AxcTriggerWriteAbsRamData(long lChannelNo, DWORD dwAddr, DWORD dwData);


	// 지정 CNT 채널의 절대 위치 트리거 기능을 위한 DWORD형 위치 정보를 설정한다.
	//----------------------------------------------------------------------------------------------------------------------------------
	// 1. AXT_SIO_CN2CH인 경우
	// dwTrigNum	--> 131072(=0x20000) 개까지 설정 가능
	// dwTrigPos	--> DWORD형 Data 입력 가능
	// dwDirection	--> 0x0(default) : dwTrigPos[0], dwTrigPos[1] ..., dwTrigPos[dwTrigNum - 1] 순으로 Data를 Write 한다.
	//					0x1			 : dwTrigPos[dwTrigNum - 1], dwTrigPos[dwTrigNum - 2], ..., dwTrigPos[0] 순으로 Data를 Write 한다.
	// *참고* 1) dwDirection: Data Write 순서만 다를 뿐 기능상의 차이 없음
	//		  2) AXC Manual의 AxcTriggerSetAbs - Description을 참고하여 data를 가공 후 사용해야 함
	//----------------------------------------------------------------------------------------------------------------------------------
	// 2. AXT_SIO_HPC4인 경우
	// dwTrigNum	--> 500 개까지 설정 가능
	// dwTrigPos	--> DWORD형 Data 입력 가능
	// dwDirection	--> 0x0(default) : 사용되지 않는 변수로, 입력하지 않아도 된다.
	//----------------------------------------------------------------------------------------------------------------------------------
	// 3. AXT_SIO_RCNT2RTEX, AXT_SIO_RCNT2MLIII, AXT_SIO_RCNT2SIIIH, AXT_SIO_RCNT2SIIIH_R인 경우
	// dwTrigNum	--> 0x200(=512) 개까지 설정 가능
	// dwTrigPos	--> DWORD형 data 입력 가능
	// dwDirection	--> 0x0(default) : 사용되지 않는 변수로, 입력하지 않아도 된다.
	//----------------------------------------------------------------------------------------------------------------------------------
    DWORD  __stdcall AxcTriggerSetAbs(long lChannelNo, DWORD dwTrigNum, DWORD* dwTrigPos, DWORD dwDirection = 0);



	// 지정 CNT 채널의 절대 위치 트리거 기능을 위한 double형 위치 정보를 설정한다.
	//----------------------------------------------------------------------------------------------------------------------------------
	// 1. AXT_SIO_CN2CH인 경우
	// dwTrigNum	--> 4194304(=0x20000*32) 개까지 설정 가능
	// dTrigPos		--> double형 data 입력 가능
	// dwDirection	--> 0x0(default) : dTrigPos[0], dTrigPos[1] ..., dTrigPos[dwTrigNum - 1] 순으로 Data를 Write 한다.
	//					0x1			 : dTrigPos[dwTrigNum - 1], dTrigPos[dwTrigNum - 2], ..., dTrigPos[0] 순으로 Data를 Write 한다.
	// *참고* 1) dwDirection: Data Write 순서만 다를 뿐 기능상의 차이 없음
	//----------------------------------------------------------------------------------------------------------------------------------
	// 2. AXT_SIO_RCNT2RTEX, AXT_SIO_RCNT2MLIII, AXT_SIO_RCNT2SIIIH_R인 경우
	// dwTrigNum	--> 0x200(=512) 개까지 설정 가능
	// dTrigPos		--> double형 data 입력 가능
	// dwDirection	--> 0x0(default) : 사용되지 않는 변수로, 입력하지 않아도 된다.
	//----------------------------------------------------------------------------------------------------------------------------------
    DWORD  __stdcall AxcTriggerSetAbsDouble(long lChannelNo, DWORD dwTrigNum, double* dTrigPos, DWORD dwDirection = 0);


	////////////////// LCM4_10_Version/////////////////////////////////////////////////////////////

	// 카운터 모듈의 PWM 출력을 활성화한다.
	DWORD __stdcall AxcTriggerSetPwmEnable(long lChannelNo, bool bEnable);

	// 카운터 모듈의 PWM 출력 활성화 상태를 확인한다.
	DWORD __stdcall AxcTriggerGetPwmEnable(long lChannelNo, bool *bEnable);

	// 카운터 모듈의 PWM 출력모드를 설정한다.
	// dwMode : PWM 출력모드
	// [0] : Manual (Manual로 설정된 PWM Data)
	// [1] : Auto (속도 Table)
	DWORD __stdcall AxcTriggerSetPwmOutMode(long lChannelNo, DWORD dwMode);
 
	// 카운터 모듈의 PWM 출력모드를 확인한다.
	// dwMode : PWM 출력모드
	// [0] : Manual (Manual로 설정된 PWM Data)
	// [1] : Auto (속도 Table)
	DWORD __stdcall AxcTriggerGetPwmOutMode(long lChannelNo, DWORD* dwpMode);
	

	// 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 속도 정보를 설정한다.
	// dMinVel : dMinVel
	// dMaxVel : dMaxVel 
	// dVelInterval : 속도 테이블에서의 구간별 속도 Interval
	// ※주의 : dMinVel부터 dVelInterval 간격으로 최대 5000개의 속두구간이 나뉜다.  
	//          (((dMaxVel-dMinVel) / dVelInterval) <= 5000)이 만족하여야 한다. 
	DWORD __stdcall AxcTriggerSetPwmVelInfo(long lChannelNo, double dMinVel, double dMaxVel, double dVelInterval);

	// 카운터 모듈의 각 테이블에 2-D 절대속도에서 PWM 신호를 출력하기 위해 필요한 속도 정보를 확인한다.
	DWORD __stdcall AxcTriggerGetPwmVelInfo(long lChannelNo, double* dpMinVel, double* dpMaxVel, double* dpVelInterval);

	//	카운터 모듈의 PWM 출력에서 Pulse 폭 제어방식을 설정한다.
	// dwMode : Pulse 폭 제어 
	// [0] : DutyRatio
	// [1] : PulseWidth
	DWORD __stdcall AxcTriggerSetPwmPulseControl(long lChannelNo, DWORD dwMode);

	// 	카운터 모듈의 PWM 출력에서 Pulse 조절방식을 확인다.
	// dwpMode : Pulse 폭 제어 
	// [0] : DutyRatio
	// [1] : PulseWidth	
	DWORD __stdcall AxcTriggerGetPwmPulseControl(long lChannelNo, DWORD *dwpMode);